# cmake-course

./: .gitignore
2_CMake/1_HelloWorld/: CMakeLists.txt
2_CMake/2_BasicProject/: CMakeLists.txt  main.cc
2_CMake/3_IntermediateProject/: CMakeLists.txt
2_CMake/3_IntermediateProject/app/: CMakeLists.txt
2_CMake/3_IntermediateProject/src/my_lib/: my_lib.cc
2_CMake/4_VariablesOptions/: CMakeLists.txt
2_CMake/5_ConfigureFile/app/: main.cc
2_CMake/5_ConfigureFile/configured/: CMakeLists.txt
2_CMake/6_SourcesAndHeaders/: CMakeLists.txt
2_CMake/6_SourcesAndHeaders/app/: CMakeLists.txt
2_CMake/7_ExternalGit/: CMakeLists.txt
2_CMake/7_ExternalGit/app/: CMakeLists.txt  main.cc
2_CMake/7_ExternalGit/src/my_lib/: CMakeLists.txt
2_CMake/8_FetchContent/: CMakeLists.txt
2_CMake/8_FetchContent/app/: CMakeLists.txt  main.cc
2_CMake/8_FetchContent/cmake/: AddGitSubmodule.cmake
2_CMake/8_FetchContent/configured/: config.hpp.in
2_CMake/9_Conan/: CMakeLists.txt  conanfile.txt
2_CMake/9_Conan/app/: CMakeLists.txt  main.cc
